# Compiler

./: CMakeLists.txt
include/jp/: primitive.h
resource/: main.jp
source/: CMakeLists.txt  main.cpp
